controls/C-0001/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0001-deny-forbidden-container-registries"
  labels:
    controlId: "C-0001"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0001/"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: kubescape.io/v1
    kind: ControlConfiguration
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
    - expression: |
        object.kind == 'Pod' ? object.spec.containers
        : object.kind in ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'] ? object.spec.template.spec.containers
        : object.kind == 'CronJob' ? object.spec.jobTemplate.spec.template.spec.containers
        : []
      name: containers
  validations:
    - expression: >
        variables.containers.all(container, params.settings.untrustedRegistries.all(registry,
        !(
          ((registry == 'docker.io' || registry == 'docker.io/') &&
            (!container.image.contains('/') ||
              (!container.image.split('/')[0].contains('.') &&
               !container.image.split('/')[0].contains(':') &&
               container.image.split('/')[0] != 'localhost'))) ||
          container.image.startsWith(registry.endsWith('/') ? registry : registry + '/')
        )))
      messageExpression: 'object.kind + "/" + object.metadata.name + " uses an image from a forbidden registry! (see more at https://kubescape.io/docs/controls/c-0001/)"'
